# debate-panel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  package.json  pages-build-config.toml  start.sh  wrangler.jsonc  wrangler.toml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  fact_checker.py  moderator.py  moderator_context.py  moderator_convergence.py  moderator_events.py  moderator_factcheck.py  moderator_interventions.py  moderator_introduction.py  moderator_reflection.py  moderator_speaker_selector.py  moderator_synthesis.py  persona.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  discussion.py  export.py
backend/app/llm/: __init__.py  client.py  prompts.py
backend/app/models/: __init__.py  agent.py  discussion.py  message.py
backend/app/orchestration/: __init__.py  cleanup.py  event_bus.py  session.py
backend/app/services/: __init__.py  panel_generator.py  session_logger.py  session_reload.py  session_storage.py
backend/app/utils/: emoji_map.py  language.py  logger.py  token_counter.py
backend/tests/: test_base_agent.py  test_cleanup.py  test_discussion_api.py  test_e2e_discussion_flow.py  test_event_bus.py  test_export_api.py  test_fact_checker.py  test_integration_full_flow.py  test_llm_client.py  test_logger.py  test_models.py  test_moderator_agent.py  test_panel_generator.py  test_persona_agent.py  test_prompts.py  test_session.py  test_sse_streaming.py  test_token_counter.py
frontend/: .env.production  index.html  (+3 more)
(+38 files in other folders)
